# nfie-floodmap

./: .gitignore  LICENSE.txt  README.md
scripts/burnin/: BurnIn Script.docx  Flowline_Rasterize.py  gdal_calc.py
src/calculate_hydraulic_properties/: command.README
src/find_dangles/: CMakeLists.txt
src/find_dangles/src/: find_dangles.cpp
src/find_inlets/: CMakeLists.txt  compile-on-roger.sh
src/find_inlets/src/: find_inlets.cpp
src/taudem/: README  TauDEM-K.201605.dinf.cpp  TauDEM-K.20160609.d8-allinone.cpp  TauDEM-K.20160609.dinf.cpp  diff.d8-dinf.TauDEM-K.201605.TauDEM-Y.README  diff.d8.TauDEM-K.TauDEM-K.201605.README
test/: HAND-blues.clr  HAND-blues.txt  HAND.clr  HAND.txt  INUNMAP-blues.clr  INUNMAP-blues1.clr  INUNMAP-blues25.clr  INUNMAP-blues25.txt  INUNMAP-blues3.clr  INUNMAP-blues3.txt  README.md  _handbyhuc-burnin.cades.sh  _handbyhuc-burnin.oramd.sh  _handbyhuc.cades.sh  _handbyhuc.oramd.sh  _handbyhuc.sh  catchShapeByHUC.py  catchmentmaskbyhuc-cleanall.sh  catchmentmaskbyhuc-runall.sh  catchmentmaskbyhuc-submitall.sh  catchmentmaskbyhuc.sh  catchmentmaskbyhucbnd-runall.sh  catchmentmaskbyhucbnd-submitall.sh  catchmentmaskbyhucbnd.sh  conus_clip.py  csv2netcdf-hydroprop-fulltable.py  csv2netcdf-hydroprop-fulltable.sh  csv2netcdf-hydroprop-fulltable2D.py  csv2netcdf-hydroprop-fulltable2D.sh  flowlinesInWBD.py  forecast-map-batch.sh  forecast-map-runall.sh  forecast-map-submitall.sh  forecast-map.sh  forecast-nwm-worst.py  forecast-table-2d-hp.py  forecast-table.py  forecast-table.sh  gdal2tiles_cfim.py  getRasterInfo.py  (+56 more)
(+4 files in other folders)
